# project-monitorize

./: .gitignore  AGENTS.md  COMMERCIAL_LICENSE.md  README.md  android_doc.md  commands.txt  flake.nix  info.md  linux_doc.md  monitorize.spec  pyproject.toml  result  skills-lock.json  test_pipeline_builder.py  test_qml.py  test_qml_list.py  test_settings.py  test_zc.py  test_zc2.py  touch_plan.txt
.copr/: Makefile
.github/: FUNDING.yml
.github/workflows/: android.yml  desktop.yml
AI-Wiki/: AGENTS.md
AI-Wiki/.obsidian/: workspace.json
Documentation/: linux_doc.md
android/: .gitignore  README.md  gradle.properties  gradle_output.txt  patch_android.py  patch_android_zero_alloc.py  patch_stream.py  rewrite_input.py  rewrite_stream.py  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: linux.md  project_structure.md
kwin-master/autotests/: test_rect.cpp  test_rectf.cpp
kwin-master/autotests/integration/: a11ykeyboardmonitor_test.cpp  activities_test.cpp  buttonrebind_test.cpp  dnd_test.cpp  dont_crash_cancel_animation.cpp  dont_crash_glxgears.cpp  dont_crash_useractions_menu.cpp  fractional_scaling_test.cpp  gamecontroller_test.cpp  idle_inhibition_test.cpp  input_stacking_order.cpp  keyboard_input_test.cpp  keyboard_layout_test.cpp  keymap_creation_failure_test.cpp  kwinbindings_test.cpp  layershellv1window_test.cpp  mouse_keys_test.cpp  move_resize_window_test.cpp  no_global_shortcuts_test.cpp  placement_test.cpp  plasma_surface_test.cpp  platformcursor.cpp  pointer_constraints_test.cpp  quick_tiling_test.cpp  screen_changes_test.cpp  screenedges_test.cpp  screens_test.cpp  selection_test.cpp  slow_keys_test.cpp  sticky_keys_test.cpp  transient_placement.cpp  virtual_desktop_test.cpp  vulkan_test.cpp  window_selection_test.cpp  workspace_test.cpp  xdgsession_test.cpp  (+3 more)
kwin-master/src/: activities.cpp  activities.h  dbusinterface.h  focuschain.cpp  focuschain.h  inputpanelv1window.cpp  internalwindow.cpp  keyboard_layout_switching.cpp  keyboard_repeat.h  killwindow.cpp  layers.cpp  org.kde.kwin.Compositing.xml  outline.cpp  resources.qrc  rulebooksettingsbase.kcfg  useractions.h  xkb.h
kwin-master/tests/: CMakeLists.txt  xdgsessiontest.cpp
kwin-master/tests/fractional-scaling/: CMakeLists.txt  README.md  buffer.cpp  buffer.h  display.cpp  display.h  main.cpp  subsurface.cpp  subsurface.h  surface.cpp  surface.h  xdg_toplevel.cpp  xdg_toplevel.h
kwin-master/tests/pip/: CMakeLists.txt  README.md
linux/: README.md  Streamer_gnome.py  Streamer_gnome_usb.py  Streamer_gnome_wifi.py  Streamer_hyprland.py  Streamer_hyprland_usb.py  Streamer_hyprland_wifi.py  Streamer_kde.py  Streamer_kde_usb.py  Streamer_kde_wifi.py  Streamer_main_desktop_usb.py  Streamer_sway_usb.py  Streamer_usb.py  Streamer_wifi.py  com.monitorize.touch.policy  cursor_sender.py  input_bridge.py  install.sh  install_polkit.sh  monitorize_gui.py  patch_pipeline.py  patch_pipeline_pacing.py  patch_touch.py  patch_touch_tmp.py  pipeline_builder.py  portal_streamer.py  receiver_player.py  requirements-windows.txt  requirements.txt  secure_udp.py  setup_uinput_permissions.sh  test_gui_controllers.py  test_inject.py  test_input_bridge.py  test_mouse.py  test_quit.py  test_receiver_player.py  test_regions.py  test_snegg_events.py  test_sway_support.py  (+7 more)
linux copy/: Streamer_gnome_usb.py  Streamer_hyprland_usb.py  Streamer_kde_usb.py  Streamer_kde_wifi.py  monitorize_gui.py  pipeline_builder.py  test_emoji_bold.py  test_noto_first.py  touch_daemon.py
linux/gui/: CustomButton.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomTextField.qml  MainMenuPage.qml  Monitorize.qmlproject  Monitorize.qmlproject.qtds  ReceiverSetupPage.qml  ReceiverStreamingPage.qml  StreamingPage.qml  Theme.qml  UsbStep1Page.qml  UsbStep2Page.qml  WifiPage.qml  __init__.py  autostart.py  backend.py  constants.py  discovery_service.py  display_controller.py  kde_virtual_monitor.py  main.qml  main_window.py  process_utils.py  receiver_controller.py  settings.py  streaming_controller.py  styles.py  third_stream_controller.py  tray_agent.py  usb_controller.py  utils.py  validation.py  widgets.py  window.py
linux/input_bridge/: daemon.py  dispatcher.py  geometry.py  libei_backend.py  protocol.py  transport.py  uinput_backend.py
linux/monitorize/: __init__.py  __main__.py
linux/scripts/: install-windows-msys2.sh  install.sh
linux/tests/: __init__.py  test_gui_controllers.py  test_input_bridge.py  test_sway_support.py  test_tls_proxy.py  test_tls_receiver.py  test_video_transport.py
linuxHG/: Streamer_gnome_usb.py  Streamer_hyprland_usb.py  Streamer_kde_wifi.py  Streamer_sway_usb.py  monitorize_gui.py  pipeline_builder.py  test_emoji.py
mutter-main/: .gitignore  .gitlab-ci.yml  check-style.py  meson.build
mutter-main/mdk/: mdk-main-window.h  mdk-monitor.h
mutter-main/meson/: check-version.py
mutter-main/po/: be.po
mutter-main/src/: meson.build
mutter-main/src/tests/x11-test-clients/: meson.build  x11-test-client-utils.c  x11-test-client-utils.h  xwayland-allow-commits-test.c
mutter-main/tools/: debug-control.py  get-state.py
nix/: package.nix
packaging/fedora/: 70-monitorize-uinput.rules  monitorize-kde-virtual-output.desktop  monitorize.desktop  monitorize.xml
packaging/flatpak/: README.md
website/: README.md  index.html  main.js  preview.sh  styles.css
website/models/: README.md
(+521 files in other folders)
